--- a/Website/Hotel_Details.html
+++ b/Website/Hotel_Details.html
@@ -40,13 +40,13 @@
         <section class="image-slider">
             <div class="slider-container">
                 <div class="slide active">
-                    <img src="Hotel_Details_Danieli4.jpg" alt="Room 1" class="slider-image">
+                    <img src="Images/Hotel_Details_Danieli4.jpg" alt="Room 1" class="slider-image">
                 </div>
                 <div class="slide">
-                    <img src="Hotel_Details_Danieli5.jpg" alt="Room 2" class="slider-image">
+                    <img src="Images/Hotel_Details_Danieli5.jpg" alt="Room 2" class="slider-image">
                 </div>
                 <div class="slide">
-                    <img src="Hotel_Details_Danieli3.jpg" alt="Room 3" class="slider-image">
+                    <img src="Images/Hotel_Details_Danieli3.jpg" alt="Room 3" class="slider-image">
                 </div>
                 <button class="prev">&#10094;</button>
                 <button class="next">&#10095;</button>
@@ -109,7 +109,7 @@
         <div class="map-picture">
 
             <h2 class="location">Location</h2>
-            <img src ="map.jpg" class="map">
+            <img src ="Images/map.jpg" class="map">
         </div>
         <section class="testimonials">
             <div class="container">
