--- a/Website/Public/Hotel_Details.html
+++ b/Website/Public/Hotel_Details.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nomado - Luxury Hotel Booking</title>
-    <link rel="stylesheet" href="Details_style.css">
+    <link rel="stylesheet" href="../CSSStyles/Details_style.css">
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,13 +40,13 @@
         <section class="image-slider">
             <div class="slider-container">
                 <div class="slide active">
-                    <img src="Images/Hotel_Details_Danieli4.jpg" alt="Room 1" class="slider-image">
+                    <img src="../Images/Hotel_Details_Danieli4.jpg" alt="Room 1" class="slider-image">
                 </div>
                 <div class="slide">
-                    <img src="Images/Hotel_Details_Danieli5.jpg" alt="Room 2" class="slider-image">
+                    <img src="../Images/Hotel_Details_Danieli5.jpg" alt="Room 2" class="slider-image">
                 </div>
                 <div class="slide">
-                    <img src="Images/Hotel_Details_Danieli3.jpg" alt="Room 3" class="slider-image">
+                    <img src="../Images/Hotel_Details_Danieli3.jpg" alt="Room 3" class="slider-image">
                 </div>
                 <button class="prev">&#10094;</button>
                 <button class="next">&#10095;</button>
@@ -109,7 +109,7 @@
         <div class="map-picture">
 
             <h2 class="location">Location</h2>
-            <img src ="Images/map.jpg" class="map">
+            <img src ="../Images/map.jpg" class="map">
         </div>
         <section class="testimonials">
             <div class="container">
