--- a/Website/Public/Login.html
+++ b/Website/Public/Login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nomado - Luxury Hotel Booking</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="Login_stilius.css">
+    <link rel="stylesheet" href="../CSSStyles/style.css">
+    <link rel="stylesheet" href="../CSSStyles/Login_stilius.css">
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
