--- a/Website/Public/Untitled-1.html
+++ b/Website/Public/Untitled-1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DreamStay Haven - Luxury Hotel Booking</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../CSSStyles/style.css">
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
